cabal-version:      3.0
name:               lamarckian
version:            0.1.0.0
-- synopsis:
description:
        Growth by usage was Lamarckians formerly famous idea that our strengths could be passed down through genetics.
        In the same way, we hope to build landing pages that evolve by heavy user usage.

        The Lamarckian library is a great tool for
        - Blogs            ==> Effortless Markdown Usage and integration in Reflex, an excellent static dom builder.
        - Landing Pages    ==> Routing and accurate link generation without the performance hit of SPA's. SEO-Optimized. 
        - Quick Mockups    ==> Easily compatible with ClasshSS and reflex-classh for UI development,
                               but doesn't force the user to use Haskell over JS.
                               
        A neat and useful feature of Lamarckian is that it shifts its static page generation to the compile stage, meaning that
        a number of errors that could occur when using static JS are actually caught by the compiler, such as the common task
        of creating a DOM which rotates between a specific number of frames/sub-DOMs, we can both ensure that you avoid indexing
        issues or mixing up the number of args this function takes, or even how many functions you have. You of course also
        have access to the full type-safe suite of Haskell for static web development as this works with any version of GHC. 
                               
license:            MIT
license-file:       LICENSE
author:             lazyLambda
maintainer:         galen.sprout@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      --Example
      Lamarckian.Compiler
      Lamarckian.JS
      Lamarckian.Render
      Lamarckian.Template
      Lamarckian.Snap
      Lamarckian.Types
      
    -- other-modules:
    -- other-extensions:
    build-depends:    base
                    , obelisk-route
                    , reflex-dom-core
                    , IStr
                    , filepath
                    , directory
                    , exceptions
                    , text
                    , containers
                    , transformers
                    , parsec
                    , bytestring
                    , snap-core
                    , template-haskell
                    , cryptonite
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
      AllowAmbiguousTypes
      BangPatterns
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      EmptyCase
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      GeneralizedNewtypeDeriving
      InstanceSigs
      KindSignatures
      LambdaCase
      MultiParamTypeClasses
      OverloadedStrings
      PolyKinds
      QuasiQuotes
      RankNTypes
      RecursiveDo
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TypeApplications
      TypeFamilies
      TypeOperators

      DeriveGeneric
      FlexibleContexts
      FlexibleInstances
      GADTs
      LambdaCase
      MultiParamTypeClasses
      OverloadedStrings
      QuasiQuotes
      RankNTypes
      ScopedTypeVariables
      TemplateHaskell
      TypeFamilies
    
